--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,10 @@
         "yiisoft/yii2-swiftmailer": "~2.1.0",
         "kartik-v/yii2-widget-select2": "dev-master",
         "spatie/dropbox-api": "^1.7",
-        "spatie/flysystem-dropbox": "^1.0"
+        "spatie/flysystem-dropbox": "^1.0",
+        "yiisoft/yii2-debug": "dev-master"
     },
     "require-dev": {
-        "yiisoft/yii2-debug": "dev-master",
         "yiisoft/yii2-gii": "dev-master",
         "yiisoft/yii2-faker": "~2.0.0",
         "yiisoft/yii2-shell": "dev-master",
